# Financial-debate-agents

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/: SKILL_INDEX.md
.agents/skills/api-contract/: SKILL.md
.agents/skills/backend-implementation/: SKILL.md
.agents/skills/browser-verification/: SKILL.md
.agents/skills/db-migration/: SKILL.md
.agents/skills/deploy-readiness/: SKILL.md
.agents/skills/doc-lookup/: SKILL.md
.agents/skills/figma-design-to-code/: SKILL.md
.agents/skills/frontend-implementation/: SKILL.md
.agents/skills/img-to-frontend/: SKILL.md
.agents/skills/project-storage-placement/: SKILL.md
.agents/skills/project-worktree-scope/: SKILL.md
.agents/skills/react-next-performance/: SKILL.md
.agents/skills/release-check/: SKILL.md
.agents/skills/research-before-build/: SKILL.md
.agents/skills/security-check/: SKILL.md
.agents/skills/skill-authoring-governance/: SKILL.md
.agents/skills/skill-integrity-tuning-refactor/: SKILL.md
.agents/skills/system-design/: SKILL.md
.agents/skills/tdd-scope/: SKILL.md
.agents/skills/ui-art-direction/: SKILL.md
.agents/skills/ui-quality-gate/: SKILL.md
.codex/skills/llm-wiki-skill-builder/: SKILL.md
.github/workflows/: ci.yml  pytest.yml
Plan/: README.md
Plan/active/: Plan-0003-agent-assets-validator-hook.md  Plan-0004-runtime-prompt-loader.md  Plan-0005-fakellm-e2e.md  Plan-0006-sample-report-artifacts.md  Plan-0007-api-cli-smoke.md  Plan-0009-final-integration-validation.md  Plan-0010-submission-readiness.md  specialist-agent-workflow-design.md  workflow-agent-handoff.md
Plan/intern-assignment-integration/: index.yaml
Plan/intern-assignment-integration/logs/: Plan_N0001.log.md
Plan/intern-assignment-integration/plans/: Plan_N0001.md
Plan/system-improvement/: index.yaml
Plan/system-improvement/logs/: Plan_N0001.log.md  (+24 more)
archive/legacy-root-docs/: 01-principles.md  02-context-boundary.md  03-work-contract.md  04-evidence-and-verification.md  05-project-source-of-truth.md  06-rework-loop.md  10-test-and-verification-inventory.md  20-agent-thinking-extraction.md  30-repo-architecture-overview.md  ARCHITECTURE.md  rules.md  skill-governance.md
archive/legacy-untitled-folder/: AGENTS.md  ARCHITECTURE.md  agent-io-dependency-map.md  context-scope-policy.md  project-operation-harness.md  rules.md
archive/project-orchestration/: project-boundary-policy.yaml
archive/runtime/: agent-invocation-policy.yaml  agent-io-contract-map.yaml  agent-output-registry.yaml  context-scope.yaml
archive/source-docs/: README.md
archive/source-docs/test-and-ci/: Makefile  build-test-pr.md  git-test-policy.md  github-ci.yml  infra.instructions.md  pull_request_template.md  pyproject.toml  regression.md
artifact/: README.md
docs/: 01-agent-operating-contract.md  02-output-verification-contract.md  03-repo-boundary-and-storage-contract.md  earnings-review-system.md
docs/reference/: agent-runtime-and-scope-reference.md  git-worktree-and-branch-reference.md  legacy-source-and-archive-map.md  migration-and-acceptance-reference.md  packet-evidence-and-rework-reference.md  repo-boundary-and-storage-reference.md  verification-ci-and-pr-reference.md
docs/system/: earnings-review-system.md
hooks/: pre-commit  pre-push
outputs/example/: report.md  workflow_result.json
outputs/example-current/: report.md  workflow_result.json
outputs/nvda-2027q1-real-llm/: report.md  workflow_result.json
outputs/sample-nvda-20260603/: report.md  workflow_result.json
outputs/sample-nvda-20260607/: report.md  workflow_result.json
outputs/sample-zs-20260603/: report.md  workflow_result.json
outputs/sample-zs-20260607/: report.md  workflow_result.json
samples/: nvda_2025q3_request.json  request.current.guidance-missing.example.json  request.current.local-presentation.example.json  request.current.sec-fallback.example.json  request.current.yfinance-presentation.example.json  request.document-files.example.json  request.example.json  request.nvda-2027q1.example.json  request.zs-2026q3.example.json
scripts/: check-agent-worktree-policy.sh  check-dev-environment.sh  check-lane-map.py  check-project-scoped-changes.sh  check-repo-hygiene.sh  check-secrets.sh  check-shell-static-analysis.sh  setup-agent-environment.sh  validate_agent_assets.py
src/: README.md  api.py  context_router.py  errors.py  expected_metrics.py  llm.py  main.py  metric_normalizer.py  preprocessor.py  prompt_loader.py  report_quality_contracts.py  report_quality_evidence_matrix.py  report_quality_external_research.py  report_quality_guidance.py  report_quality_missing_data.py  report_quality_numeric_grounding.py  report_quality_source_inventory.py  report_quality_source_timing.py  report_renderer.py  runtime_config.py  sec_company_facts.py  structured.py  workflow.py  workflow_agents.py  workflow_errors.py  workflow_models.py  workflow_runtime.py  workflow_validation.py
src/prompts/: README.md  debate_judge_agents.md  financial_agents.md  presentation_agents.md
templates/: README.md  codex-config.toml.example  evidence-record.yaml  parallel-lane-map.yaml  project-storage-map.yaml  rework-record.yaml  serena-project.yml  verification-record.yaml  work-contract.yaml
tests/: test_agent_assets.py  test_api_contract.py  test_api_smoke.py  test_clean_checkout_reproducibility.py  test_cli_smoke.py  test_context_router.py  test_contract_models.py  test_error_handling.py  test_expected_metrics.py  test_extension_surface_integrity.py  test_foundation_integrity.py  test_lane_map_check.py  test_llm_provider.py  test_metric_normalizer.py  test_preprocessor.py  test_report_quality_full.py  test_report_renderer.py  test_runtime_config.py  test_safety_guards.py  test_sec_company_facts.py  test_system_design_integrity.py  test_workflow_agents.py  test_workflow_api.py  test_workflow_e2e.py  test_workflow_models.py  test_workflow_runtime.py
tests/fixtures/: sample_presentation.txt
tools/: create_interactive_external_sources.py
(+73 files in other folders)
