[project]
name = "earnings-debate-agent"
version = "0.1.0"
description = "Multi-agent debate system for US equity earnings review"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "yfinance>=0.2.40",
    "sec-edgar-downloader>=5.0.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "click>=8.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "requests>=2.32.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "types-requests>=2.32.0",
]

[project.scripts]
earnings-debate = "src.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".serena",
    ".venv",
    "archive",
    "outputs",
    "samples/cache",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501", # Let the formatter handle practical wrapping; keep CI focused on defects/imports.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
exclude = [
    "^archive/",
    "^outputs/",
    "^samples/cache/",
]
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false
