[project]
name = "model-architecture"
version = "0.1.0"
description = "LangGraph-based AI development harness scaffold"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16.0",
    "anthropic>=0.94.1",
    "authlib>=1.7.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.5.0",
    "openai>=2.30.0",
    "orjson>=3.10.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.8.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "stripe>=15.0.1",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage[toml]>=7.8.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.0",
    "ruff>=0.11.0",
    "types-PyYAML>=6.0.12",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
packages = ["apps", "src"]

[tool.coverage.run]
source = ["apps", "src"]
branch = true

[tool.coverage.report]
skip_empty = true
